# OccuSpytial

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  build-wheels.sh  build.py  log_config.toml  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
docs/: conf.py  distributions.rst  index.rst  install.rst  samplers.rst  user_guide.ipynb  utils.rst
examples/: demo_data.py  sampler_demo.py
occuspytial/: __init__.py  chain.py  data.c  data.py  data.pyx  distributions.c  distributions.pyx  interface.py  posterior.py  utils.py
occuspytial/gibbs/: __init__.py  _cumsum.pyx  base.py  logit.py  parallel.py  probit.py  state.py
occuspytial/gibbs/tests/: test_samplers.py  test_state.py
occuspytial/icar/: __init__.py  model.py
occuspytial/icar/helpers/: __init__.py  ctypes_helper.c  ctypesfunc.py
occuspytial/occuspytial/: __init__.py  interface.py
occuspytial/occuspytial/icar/: __init__.py  model.py
occuspytial/occuspytial/icar/helpers/: ctypesfunc.py
occuspytial/occuspytial/utils/: utils.py
occuspytial/tests/: test_chain.py  test_data.py  test_distributions.py  test_posterior.py  test_utils.py  test_version.py
occuspytial/utils/: __init__.py  basemodel.py  dataprocessing.py  misc.py  stats.py  utils.py  visualization.py
tests/: utils_test.py
