[tool.poetry]
name = "occuspytial"
version = "0.1.0-alpha"
description = "'A package for bayesian analysis of spatial occupancy models'"
authors = ["Zolisa Bleki"]
license = "BSD-3-Clause"
readme = 'README.md'
repository = "https://github.com/zoj613/OccuSpytial/"
keywords = [
    'spatial statistics',
    'occupancy modelling',
    'markov chain monte carlo',
    'occupancy prediction',
    'Species Occupancy'
]
include = ["occuspytial/**/*.c"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"
pypolyagamma = "^1.2.3"
scipy = "^1.5.1"
joblib = "^0.14.0"
numpy = "^1.19.0"
tqdm = "^4.46.1"
arviz = "^0.9.0"
libpysal = "*"

sphinx = {version = "^3", optional = true}
nbsphinx = {version = "*", optional = true}
sphinx_rtd_theme = {version = "*", optional = true}
numpydoc  = {version = "*", optional = true}
jupyter = {version = "*", optional = true}


[tool.poetry.extras]
docs = ["sphinx", "nbsphinx", "sphinx_rtd_theme", "numpydoc", "jupyter"]


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "*"
Cython = "^0.29.20"
toml = "*"


[build-system]
requires = ["poetry>=0.12", "Cython>=0.29.20"]
build-backend = "poetry.masonry.api"
