[tool.poetry]
name = "occuspytial"
version = "0.2.0"
description = "'A package for bayesian analysis of spatial occupancy models'"
authors = ["Zolisa Bleki"]
license = "BSD-3-Clause"
readme = 'README.md'
repository = "https://github.com/zoj613/OccuSpytial/"
keywords = [
    'spatial statistics',
    'occupancy modelling',
    'markov chain monte carlo',
    'occupancy prediction',
    'Species Occupancy'
]
include = [{path = "occuspytial/*.c", format = "sdist"}]
exclude = ["tests", "occuspytial/**/tests", "occuspytial/**/*.pyx"]


[tool.poetry.build]
script = "build.py"


[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.5.1"
joblib = "^0.14.0"
numpy = "<=1.20.0"
tqdm = "^4.46.1"
arviz = "^0.11"
libpysal = "*"

sphinx = {version = "^3", optional = true}
nbsphinx = {version = "*", optional = true}
sphinx_rtd_theme = {version = "*", optional = true}
numpydoc  = {version = "*", optional = true}
jupyter = {version = "*", optional = true}
pypandoc = {version = "^1.5", optional = true}
polyagamma = {version = "^1.2.0", allow-prereleases = true}


[tool.poetry.extras]
docs = ["sphinx", "nbsphinx", "sphinx_rtd_theme", "numpydoc", "jupyter", "pypandoc"]


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "*"
Cython = "^0.29.20"
toml = "*"
pre-commit = "^2.6.0"
codecov = "^2.1.8"


[build-system]
requires = ["poetry-core>=1.0.0a9", "numpy==1.19.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
